testsuite/tests/grammar/invalid_lexers/case_2.lkt
import common

lexer foo_example {
    foo
    match p"foo" {
        else send(foo, 3)
    }
}
